fixed margin on mobile

--- a/src/styles/MainPage.scss
+++ b/src/styles/MainPage.scss
@@ -66,4 +66,7 @@
 	.spline-wrapper {
 		display: none;
 	}
+	.info-wrapper {
+		margin-right: 0px;
+	}
 }
